force-app/main/default/objects/Lead/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primer contacto</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
            <value>
                <fullName>Cita programada</fullName>
            </value>
            <value>
                <fullName>Primer cita</fullName>
            </value>
            <value>
                <fullName>Prospecto interesado a futuro</fullName>
            </value>
            <value>
                <fullName>Prospecto no interesado&quot;</fullName>
            </value>
            <value>
                <fullName>Prospecto Convertido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>