force-app/main/default/objects/Lead/fields/Necesidades__c.field-meta.xml
<CustomField>
    <fullName>Necesidades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Necesidades</label>
    <referenceTo>Necesidades__c</referenceTo>
    <relationshipLabel>Prospectos</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>