force-app/main/default/objects/Lead/fields/Servicios_publicos__c.field-meta.xml
<CustomField>
    <fullName>Servicios_publicos__c</fullName>
    <label>División</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambiental</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>Retardante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>